<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/biplapneupane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/made_by_biplap_neupane"
        android:gravity="center"
        android:autoLink="web"
        android:textColor="@color/skyblue"
        android:clickable="true"
        android:textSize="25sp"
        android:textStyle="italic"
        android:onClick="openLinkBiplap"
        />


    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/result_tv"
        android:layout_margin="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        android:text="@string/_0"
        android:textSize="64dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@+id/buttons_layout"
        android:layout_margin="16dp"/>


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@drawable/rounded_layout_bg"
        android:paddingVertical="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:backgroundTint="#FF0000"
                android:id="@+id/button_c"
                android:text="@string/c"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_open_bracket"
                android:text="@string/button_open_bracket"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_close_bracket"
                android:text="@string/button_close_bracket"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:id="@+id/button_divide"
                android:text="@string/button_divide"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_7"
                android:text="@string/button_7"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_8"
                android:text="@string/button_8"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_9"
                android:text="@string/button_9"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="34sp"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:id="@+id/button_multiply"
                android:text="@string/button_multiply"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_4"
                android:text="@string/button_4"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_5"
                android:text="@string/button_5"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_6"
                android:text="@string/button_6"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="34sp"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:id="@+id/button_subtract"
                android:text="@string/button_subtract"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_1"
                android:text="@string/button_1"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_2"
                android:text="@string/button_2"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_3"
                android:text="@string/button_3"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:id="@+id/button_add"
                android:text="@string/button_add"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="#FF0000"
                android:layout_margin="8dp"
                android:id="@+id/button_ac"
                android:text="@string/button_ac"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_0"
                android:text="@string/button_0"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/skyblue"
                android:layout_margin="8dp"
                android:id="@+id/button_dot"
                android:text="@string/button_dot"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:id="@+id/button_equals"
                android:text="@string/button_equals"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
